<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="562dp"
        android:layout_height="951dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="382dp"
        android:layout_height="558dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/blackcard" />

    <EditText
        android:id="@+id/name"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/nameicon"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/college"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:drawableStart="@drawable/rollicon"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_college_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FBFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <EditText
        android:id="@+id/section"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:drawableStart="@drawable/section"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_section"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <EditText
        android:id="@+id/stream"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:layout_marginBottom="340dp"
        android:drawableStart="@drawable/section"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_stream"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.425" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:drawableStart="@drawable/section"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_roll_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/display"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:background="@drawable/mybutton"
        android:onClick="display"
        android:text="@string/view"
        android:textSize="24sp"
        app:backgroundTint="#186C8E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

</androidx.constraintlayout.widget.ConstraintLayout>